--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py27,py35,py36,py37
+envlist = py35,py36,py37
 skipsdist = True
 
 [testenv]
 basepython=
-    py27: python2.7
     py35: python3.5
     py36: python3.6
     py37: python3.7
