--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py36,py37
+envlist = py35,py36,py37,py38
 skipsdist = True
 
 [testenv]
@@ -7,6 +7,7 @@ basepython=
     py35: python3.5
     py36: python3.6
     py37: python3.7
+    py38: python3.8
 
 deps = -rrequirements.txt
 whitelist_externals:
