chore: bump dependencies and disable pytest caching

--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,4 @@ whitelist_externals:
     rm
     true
 commands =
-    {env:TOXBUILD:py.test --junitxml tests/unit/results-{envname}.xml tests/unit/}
+    {env:TOXBUILD:py.test -p no:cacheprovider --junitxml tests/unit/results-{envname}.xml tests/unit/}
